--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 정문성. All rights reserved.</p>
+    <p>&copy; 2025 MJ. All rights reserved.</p>
   </footer>
 
 </body>
