--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
   <section id="projects">
     <h2>주요 프로젝트 경험</h2>
     <ul>
-      <li><strong>포트폴리오 웹사이트 제작</strong> – 해당 사이트 구성</li>
-      <li><strong>사내 업무관리 시스템 개발</strong> – 교육 참여</li>
-      <li><strong>모바일 앱 클론 프로젝트</strong> – 무기 사용</li>
+      <li><strong>최고의 아웃풋</strong> – 해당 사이트 구성</li>
+      <li><strong>최대 업적</strong> – 교육 참여</li>
+      <li><strong>특기</strong> – 무기 사용</li>
     </ul>
   </section>
 
   <section id="resume">
     <h2>이력</h2>
     <p>2020 - 현재: 무직</p>
-    <p>2016 - 2020: 고졸</p>
+    <P>2011 - 2013 : 육군 전역</P>
+    <p>2007 - 2011: 고졸</p>
   </section>
 
   <section id="contact" class="contact-info">
