--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <section id="resume">
     <h2>이력</h2>
-    <p>2020 - 현재: 무직</p>
+    <p>2020 - 현재: 줄넘기</p>
     <P>2011 - 2013 : 육군 전역</P>
     <p>2007 - 2011: 고졸</p>
   </section>
