--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ㅇ<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
@@ -75,9 +75,8 @@
   <section id="projects">
     <h2>주요 프로젝트 경험</h2>
     <ul>
-      <li><strong>최고의 아웃풋</strong> – 해당 사이트 구성</li>
-      <li><strong>최대 업적</strong> – 교육 참여</li>
-      <li><strong>특기</strong> – 무기 사용</li>
+      <li><strong>최대 업적</strong> – 병장 만기 전역</li>
+      <li><strong>특기</strong> – 없음</li>
     </ul>
   </section>
 
